Refactored the code to improve readability and organization, fix reply arrow placement

--- a/src/index/CSS/ReviewsIndex.css
+++ b/src/index/CSS/ReviewsIndex.css
@@ -58,13 +58,16 @@ color: rgb(0, 0, 0);
   text-align:right;
   padding-right: 20px
 }
+
 .admin-comments {
- display: block;
-  /* border: 1pt solid blue; */
-  
-  max-width:50vh;
+  display: flex;
+
+  max-width:60vh;
   margin-left: auto; 
-  margin-top: 30px;
+  margin-right:20px;
+  
+ border-radius: 8px;
+ margin-bottom: 30px;
 }
 
 
@@ -74,18 +77,16 @@ color: rgb(0, 0, 0);
   height:10px;
   background-color: rgb(85, 122, 174);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
-  margin-left:20px;
-  margin-right:30px;
   border-radius: 8px;
-
+  margin-top:5px;
 }
 
 
 
 .admin-profile-photo {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin-left: 20px;
   margin-top:-10px;
   display: flex;
@@ -94,34 +95,39 @@ color: rgb(0, 0, 0);
   overflow: hidden;
   border: 1px solid rgb(0, 0, 0);
   background-color:white;
-  border-radius: 50%;
+  border-radius: 8px;
 }
 
 .reply-icon {
-  display: block;
-  font-size:40px;
-  margin-left:10px;
-  margin-bottom: -10px;
   
+  position:relative;
+  font-size:40px;
+  margin-left:20px;
+  margin-top: -25px;
+  padding: 5px;
   color:rgba(77, 102, 77, 0.303);
 }
 
 .admin-reply {
+  
   position: relative;
   margin-bottom:20px;
   display: flexbox;
   margin-top:30px;
-  margin-left: 20px;
-  text-align: left;
+  margin-left:5px;
+margin-right: 20px;
+
+  
+  text-align: right;
+  /* border: 1pt solid rgb(255, 0, 0); */
 
 }
 
 .admin-name {
-  display: flexbox;
+ 
   text-align: right;
   font-weight: bold; 
   /* border: 1pt solid rgb(4, 255, 109); */
-  margin-right: 15px;
   font-style: italic;
 }
 
